Minor text changes

--- a/server/views/review/bassRequest.pug
+++ b/server/views/review/bassRequest.pug
@@ -36,7 +36,7 @@ block content
         h2.heading-medium Now send the case
 
         div.pure-u-1.pure-u-md-3-4
-            | The case is ready to send to the responsible officer for BASS area checks.
+            | The case is ready to send for BASS area checks.
 
         div.paddingBottom.smallPaddingTop
             form#addressReviewForm(method='POST', action='/hdc/send/bassReview/' + bookingId)
