--- a/server/views/review/reporting.pug
+++ b/server/views/review/reporting.pug
@@ -13,7 +13,7 @@ block content
     div.pure-u-md-1-2.paddingBottom
         div
             div.smallPaddingTop.paddingBottom
-                span.block Name of person
+                span.block Name
                 span#reportingName.block.bold #{reporting.name}
 
             div.smallPaddingTop.paddingBottom
