--- a/server/views/taskList/tasks/curfewAddressTask.pug
+++ b/server/views/taskList/tasks/curfewAddressTask.pug
@@ -12,7 +12,7 @@ div.paddingBottom
                 -var curfewAddressApproved = licenceStatus.decisions.curfewAddressApproved;
 
                 if curfewAddressApproved === 'approved'
-                    | Address approved
+                    | Address checked
                 else if curfewAddressApproved === 'withdrawn'
                     span.bold.alert Address withdrawn
                 else if curfewAddressApproved === 'rejected'
