--- a/server/views/reporting/reportingInstructions.pug
+++ b/server/views/reporting/reportingInstructions.pug
@@ -18,7 +18,7 @@ block content
                 div.pure-g.largeMarginBottom.midPaddingBottom
                     div.pure-u-1.pure-u-md-4-5
                         div.form-group
-                            label.form-label(for="name") Name of person (or Duty Officer if unknown)
+                            label.form-label(for="name") Name (or Duty Officer if unknown)
                             input#name.form-control(name="name" type="text" value=data.name aria-label="Name (or Duty Officer's name)")
 
                         div.form-group
