--- a/server/views/taskList/tasks/HDCRefusalTask.pug
+++ b/server/views/taskList/tasks/HDCRefusalTask.pug
@@ -3,7 +3,7 @@ div.pure-g
         if licenceStatus.decisions.refused
             span.alert.bold HDC refused
         else
-            span Refuse the case if there is no suitable address or not enough time
+            span Refuse the case if there is no available address or not enough time
 
     div.pure-u-1.pure-u-md-1-4.center.midPaddingTopBottom
         -var path = '/hdc/finalChecks/refuse/' + prisonerInfo.bookingId
