--- a/server/views/bassReferral/bassOffer.pug
+++ b/server/views/bassReferral/bassOffer.pug
@@ -4,18 +4,30 @@ include ../includes/errorBannerWithDetailObject
 
 block content
 
-    -var bassRequest = data && data.bassRequest || {}
+    -var bassWithdrawn = licenceStatus.decisions.bassWithdrawn
+    -var bassWithdrawalReason = licenceStatus.decisions.bassWithdrawalReason
+
+    -var bassRequest = bassWithdrawn ? withdrawnBass.bassRequest : data && data.bassRequest || {}
+    -var bassAreaCheck = data && data.bassAreaCheck || {}
     -var bassOffer = data && data.bassOffer || {}
+
 
     div.pure-g.pure-u-1
         include ../includes/back
         include ../includes/personalDetailsSummary
         +errorBannerWithDetail(errorObject)
 
+        if bassWithdrawn
+            -var message = bassWithdrawalReason === 'offer' ? 'This offer has been withdrawn' : 'The offender has withdrawn this request'
+            div.pure-g
+                div.error-summary.pure-u-1.center(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
+                    h2.heading-medium.error-summary-heading.noMargin#error-summary-heading #{message}
+
         h2.heading-large BASS address
 
         div.pure-u-1-2
-            | The responsible officer has approved the following BASS area:
+            if bassAreaCheck.bassAreaSuitable === 'Yes'
+                | The responsible officer has approved the following BASS area:
 
             div.paddingTop.paddingBottom
                 div.pure-u-1-2
@@ -25,6 +37,12 @@ block content
                     div County
                     div.bold#proposedCounty #{bassRequest.proposedCounty}
         div.pure-u-1-2
+
+        if data.bassRequest
+            hr
+
+            div.pure-u-1.pure-u-md-1.smallPaddingTop
+                include ./includes/bassRequestActions
 
         hr
 
