--- a/server/views/taskList/caTasksPostApproval.pug
+++ b/server/views/taskList/caTasksPostApproval.pug
@@ -2,7 +2,10 @@ extends taskListTemplate
 
 block tasks
 
-    if (licenceStatus.decisions.curfewAddressApproved !== 'withdrawn')
+    - var curfewAddressReady = licenceStatus.decisions.curfewAddressApproved !== 'withdrawn'
+    - var bassReady = licenceStatus.decisions.bassReferralNeeded && !licenceStatus.decisions.bassWithdrawn
+
+    if (curfewAddressReady || bassReady)
         div.taskListItem.borderBottomLight
             include tasks/eligibilitySummaryTask
 
@@ -13,7 +16,7 @@ block tasks
             else
                 include tasks/curfewAddressTask
 
-        if (licenceStatus.decisions.curfewAddressApproved !== 'withdrawn')
+        if (curfewAddressReady || bassReady)
             div.taskListItem.borderBottomLight
                 include tasks/riskManagementTask
 
@@ -42,7 +45,10 @@ block tasks
             else if allowedTransition === 'caToDmRefusal'
                 include tasks/caSubmitRefusalTask
             else if allowedTransition === 'caToRo'
-                include tasks/caSubmitAddressReviewTask
+                if licenceStatus.decisions.bassReferralNeeded
+                    include tasks/caSubmitBassReviewTask
+                else
+                    include tasks/caSubmitAddressReviewTask
             else
                 include tasks/createLicenceTask
 
