--- a/server/views/proposedAddress/includes/otherResidents.pug
+++ b/server/views/proposedAddress/includes/otherResidents.pug
@@ -13,14 +13,15 @@ mixin otherResidents(prefix, savedAddress)
             div.pure-u-1.pure-u-sm-1-6 Age
 
         while n < residentsToShow
+            -var error = errorObject.residents && errorObject.residents[n] || {}
             div.pure-g.u-paddingBottom.sm-smallPaddingBottom.resident
                 div.pure-u-1.pure-u-sm-5-12
-                    label.form-label.hideNonMobile(for="residentName-"+n) Name
-                    input.form-control.residentName(id="residentName-"+n name=prefix+"[residents]["+n+"][name]" value=savedResidents[n] && savedResidents[n].name autocomplete="off" aria-label="Other resident's name")
+                    label.form-label.hideNonMobile(for="residentname-"+n) Name
+                    input(id="residentname-"+n name=prefix+"[residents]["+n+"][name]" value=savedResidents[n] && savedResidents[n].name autocomplete="off" aria-label="Other resident's name" class=error.name ? "form-control residentName form-control-error" : "form-control residentName")
                 div.pure-u-1.pure-u-sm-5-12.sm-PadLeftRight15
-                    label.form-label.hideNonMobile(for="residentRelation-"+n) Relation to offender
-                    input.form-control.residentRelation(id="residentRelation-"+n name=prefix+"[residents]["+n+"][relationship]" value=savedResidents[n] && savedResidents[n].relationship autocomplete = "off" aria-label="Other resident's relationship to offender")
+                    label.form-label.hideNonMobile(for="residentrelationship-"+n) Relation to offender
+                    input(id="residentrelationship-"+n name=prefix+"[residents]["+n+"][relationship]" value=savedResidents[n] && savedResidents[n].relationship autocomplete = "off" aria-label="Other resident's relationship to offender" class=error.relationship ? "form-control residentRelation form-control-error" : "form-control residentRelation")
                 div.pure-u-1.pure-u-sm-1-6
-                    label.form-label.hideNonMobile(for="residentAge-"+n) Age
-                    input.form-control.residentAge(id="residentAge-"+n name=prefix+"[residents]["+n+"][age]" value=savedResidents[n] && savedResidents[n].age autocomplete="off" aria-label="Other resident's age")
+                    label.form-label.hideNonMobile(for="residentage-"+n) Age
+                    input(id="residentage-"+n name=prefix+"[residents]["+n+"][age]" value=savedResidents[n] && savedResidents[n].age autocomplete="off" aria-label="Other resident's age" class=error.age ? "form-control residentAge form-control-error" : "form-control residentAge")
             - n++
